# codex

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  404.html  Makefile  index.html  justfile  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gh-pages.yml
arts/setup-mkdocs/: index.html
assets/javascripts/: decrypt-contents.js
code-management/: index.html
coding/architecture/ddd/: index.html
coding/architecture/entity-relationship/: index.html
coding/architecture/repository-pattern/: index.html
coding/basics/: index.html
coding/intellij-idea/: index.html
coding/python/: index.html
coding/sql/: index.html
devops/: index.html
devops/bash/: index.html
devops/docker/: index.html
docs/: code-management.md  index.md  mkdocs.md  python-setup.md
docs/arts/: setup-mkdocs.md
docs/coding/: intellij-idea.md
docs/devops/: bash.md  docker.md
docs/health/: fitness.md  sleep.md
docs/macos/: index.md
docs/ops/: index.md  intellij-idea.md
docs/setup-docs/: getting-started.md  tools-plugins.md
docs/tooling/: git.md  intellij-idea.md  setup-mkdocs.md
health/fitness/: index.html
health/sleep/: index.html
macos/: index.html
mkdocs/: index.html
ops/: index.html
ops/intellij-idea/: index.html
projects/glab-analyzer/: index.html
python-setup/: index.html
search/: search_index.json
setup-docs/getting-started/: index.html
setup-docs/tools-plugins/: index.html
tooling/bash/: index.html
tooling/git/: index.html
tooling/intellij-idea/: index.html
tooling/setup-mkdocs/: index.html
(+39 files in other folders)
