[tool.poetry]
name = "yggdrasil"
version = "0.1.0"
description = ""
authors = ["svanderweerd"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
