[tool.poetry]
name = "codex"
version = "0.1.0"
description = ""
authors = ["svanderweerd"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocs-section-index = "^0.3.4"
mkdocs-autolinks-plugin = "^0.6.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-minify-plugin = "^0.6.1"
pymdown-extensions = "^9.9"
pre-commit = "^2.20.0"
mkdocs-encryptcontent-plugin = "^2.4.1"
proselint = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
